# zed-sdk-rust

./: Cargo.toml
zed-sdk/: Cargo.toml
zed-sdk-sys/: Cargo.toml  build.rs
zed-sdk-sys/config/: enums.txt
zed-sdk-sys/src/: bindings.rs  ext.rs  lib.rs
zed-sdk/examples/: multi_camera.rs  recording.rs
zed-sdk/src/: common.rs  consts.rs  error.rs  input.rs  lib.rs  recording.rs  streaming_parameters.rs  utils.rs
zed-sdk/src/camera/: builder.rs  cam.rs  input_source.rs  mod.rs  recording_state.rs  streaming_state.rs
