[package]
name = "zed-sdk-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

[build-dependencies]
anyhow = "1.0.53"
bindgen = { version = "0.59.2", optional = true }

[features]
generate-bindings = ["bindgen"]
