[package]
name = "zed-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
enum-repr = "0.2.6"
noisy_float = "0.2.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
zed-sdk-sys = { version = "0.1.0", path = "../zed-sdk-sys" }

[dev-dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
ctrlc = "3.2.1"
dialoguer = "0.9.0"

[features]
generate-bindings = ["zed-sdk-sys/generate-bindings"]
